tests/owned_abstractions/moved_owned_var_error.june
// error: moved variable accessed after move

struct Foo {
    z: i64
}

let foo = new owned Foo(z: 100)

let y = foo

println(foo.z)